refactoring - added Timer class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Timer To New Year</title>
    <link href="style.css" rel="stylesheet">
-    <script src="script.js" defer></script>
+<!--    <script src="script.js" defer></script>-->
+    <script src="classTimer.js" defer></script>
 </head>
 <body>
     <main>
